# deepsync-widget

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: build.yml  release.yml
scripts/: setup.ps1
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: FilterPanel.tsx  HUDOverlay.tsx  SettingsDrawer.tsx  Slideshow.tsx  Timer.tsx
src/hooks/: useCsvData.ts  usePomodoro.ts  useSlideshow.ts
src/lib/: csvParser.ts  windowManager.ts
src/styles/: animations.css  hud.css  settings.css  slideshow.css  timer.css  variables.css
src/types/: index.ts
