[package]
name = "deepsync-widget"
version = "0.1.0"
description = "DeepSync Widget"
authors = ["you"]
edition = "2021"

[lib]
name = "deepsync_widget_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = "2.0"

[dependencies]
# エラーログの @tauri-apps/api (v2.10.1) に合わせる
tauri = { version = "2.10", features = [] } 

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# エラーログの @tauri-apps/plugin-http (v2.5.8) に合わせる
tauri-plugin-http = "2.5"

# エラーログの @tauri-apps/plugin-shell (v2.3.5) に合わせる
tauri-plugin-shell = "2.3"
