[package]
name = "deepsync-widget"
version = "0.1.4"
edition = "2021"

[lib]
name = "deepsync_widget_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri-plugin-http = "2.0"
tauri-plugin-shell = "2.0"
